--- a/src/adminPages/ProductManagement.css
+++ b/src/adminPages/ProductManagement.css
@@ -1,6 +1,5 @@
 .product-management-container {
   display: flex;
-  height: 70vh;
 }
 
 .shop {
@@ -19,6 +18,7 @@
 
 .product-list {
   flex: 1;
+  height: 65vh;
 }
 
 .product-form {
@@ -31,8 +31,8 @@
   margin: 0 auto;
 }
 
-h2 {
-  margin-top: 0;
+.product-management-container h2 {
+  margin-bottom: 0.5rem;
 }
 
 label {
@@ -40,18 +40,14 @@ label {
   margin-bottom: 10px;
 }
 
-input,
-textarea,
+.product-management-container input,
+.product-management-container textarea,
 select {
   width: 100%;
   padding: 8px;
   font-size: 14px;
   border-radius: 4px;
   border: 1px solid #ccc;
-}
-
-select {
-  height: 32px;
 }
 
 .product-form button {
@@ -62,6 +58,7 @@ select {
   color: #fff;
   border: none;
   cursor: pointer;
+  margin: auto 1rem auto auto;
 }
 
 button:hover {
