--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,9 +2,9 @@
     margin: 0%;
     text-decoration: none;
     list-style: none;
-    color: #836953;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 
 ul {
     padding: 0 1em;
@@ -12,12 +12,17 @@ ul {
 
 li {
     padding: 0.25rem 1rem;
-    border: 1px solid white;
+    border: 1px solid #ffffff;
+    color: #836953;
 }
 
 
 /* nav */
-
+    .active {
+        border: 2px solid #FFFFFF;
+        padding: 0.24rem;
+        border-radius: 10px;
+    }
     .nav-container {
         background-color: #f8c8dc;
         padding: 0.5rem;
@@ -32,7 +37,7 @@ li {
 
     .movable-nav {
         display: grid;
-        grid-template-columns: 3.5fr 1fr 1fr 1fr 1.5fr;
+        grid-template-columns: 3fr 1.5fr 1.5fr 1.5fr 1.5fr;
         width: 100%;
         margin: 0 auto;
     }
@@ -43,13 +48,15 @@ li {
         justify-content: center;
         height: 2rem;
         text-align: center;
+        color: #836953;
     }
 
     .nav-item {
         display: flex; 
         align-items: center;
         justify-items: center;
-        gap:0.5rem;
+        gap:0.5rem;        
+        color: #836953;
     }
 
     .icon {
@@ -77,6 +84,7 @@ li {
             margin: auto;
             border: 1px solid #836953;
             cursor: pointer;
+            color: #836953;
         }
 
         
@@ -133,7 +141,7 @@ li {
         }
 
         .search-form input{
-            width: 90%;
+            width: 85%;
             padding: 0.25rem 0.5rem;
             border: 0.25rem;
             border-top-left-radius: 10px;
@@ -146,7 +154,7 @@ li {
         }
 
         .search-form button{
-            width: 10%;
+            width: 15%;
             border: 0.25rem;
             background: #836953;
             border-top-right-radius: 10px;
@@ -164,17 +172,34 @@ li {
         }
 
     /* collapsible */
-        .collapse {
-            background-color: #FFFFFF;
+
+        .show {
+            display: block;
+            padding: 3rem;
+            margin: 0;
+            background-color: #ffffff !important;
         }
 
-        .collapsible {
+        .hide {
             display: none;
-            padding: 2rem;
+        }
+
+        .collapse {
+            background-color: #FFFFFF;
+            color: #836953;
+            position: absolute;
+            left:0;
+            margin: 0%;
+            z-index: 1;
+            width: 60%;
         }
 
         .categories a:hover li , .categories a:hover h3 , .categories a:hover h4 {
             background-color: #f8c8dc;
+        }
+
+        .categories a li , .categories a h3 , .categories a h4 {
+            color: #836953;
         }
 
 
@@ -195,37 +220,36 @@ li {
 
         .needhelp a:hover .icon path,
         .needhelp a:hover h4 {
-        color: #f8c8dc;
+            color: #f8c8dc;
         }
 
-
+        .needhelp a .icon path,
+        .needhelp a h4 {
+            color: #836953;
+        }
 
         @media (min-width:992px) and (max-width:1199px){
             
             .navbar {
                 grid-template-columns: 0.5fr 1.5fr 4fr;
             }
-
-            .movable-nav {
-                grid-template-columns: 4fr 1.5fr 1.5fr 1.5fr 1.5fr;
-            }  
         
             .search-form {
                 width: 90%;
             }
             
             .search-form input{
-                width: 85%;
+                width: 80%;
             }
     
             .search-form button{
-                width: 15%;
+                width: 20%;
             }
         }
         
         @media (min-width:768px) {
         
-            .movable-nav .lense {
+            .movable-nav .lense , .movable-nav .home {
                 display: none;
             }
         
@@ -261,17 +285,12 @@ li {
             }
         }
         
-        
-        
-        @media (min-width:576px) and (max-width:767px){
-            .navbar {
-                grid-template-columns: 1.5fr 4fr 6fr;
-            }
+        @media (max-width:767px) {
 
-            .movable-nav {
-                grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
+            .collapsible {
+                padding: 2rem;
             }
-        
+            
             .searchbar {
                 display: none;
             }
@@ -279,6 +298,21 @@ li {
             .navilabel {
                 display: none;
             }
+
+            @media (min-width:576px) {
+                .navbar {
+                    grid-template-columns: 1.5fr 4fr 6fr;
+                }
+    
+                .movable-nav {
+                    grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
+                }
+            
+                .movable-nav .home {
+                    display: none;
+                }
+            }
+            
         }
 
         /* mobile */
@@ -292,7 +326,7 @@ li {
                 position: fixed;
                 left: 0;
                 bottom: 0;
-                grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
                 gap: 0.05rem;
                 background-color: #f8c8dc;  
             }
@@ -303,14 +337,6 @@ li {
         
             h4 {
                 font-size: 1rem;
-            }
-        
-            .searchbar {
-                display: none;
-            }
-        
-            .navilabel {
-                display: none;
             }
 
             .movable-nav .navi{
