--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,52 @@
   }
 }
 
+.floating-button , .back-to-top-button {
+  position: fixed;
+  bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
+  background-color: #f8c8dc;
+  color: #836953;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 2rem;
+  border: 2px solid #836953;
+}
 
+.floating-button {
+  animation: bounce 1.5s infinite;
+  left: 2rem;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.back-to-top-button {
+  animation: blink 1s infinite;
+  right: 2rem;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
