--- a/src/components/newsmodal.css
+++ b/src/components/newsmodal.css
@@ -9,6 +9,8 @@
     visibility: hidden; 
     opacity: 0; 
     z-index: 9999;
+    width: 100vw;
+    height: 100vh;
 }
 
 .overlay:target { 
@@ -17,29 +19,24 @@
 
 #popup1 { 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #836953;
 }
 
 #popup1 .popup {
-    margin: 0px auto; 
-    padding: 50px 20px;
-    background: #fff; 
-    border-radius: 0px; 
-    height: 260px; 
-    width:690px; 
-    position: relative;    
+    background: #fff;
+    border-radius: 10px;
+    width: 40%;
+    height: auto;
+    position: fixed;
     text-align: center;
-    top: 50% !important;   
-    position: fixed !important;
-    -moz-transform: translateY(-50%);    
-    -webkit-transform: translateY(-50%);  
-    -o-transform: translateY(-50%);   
-    -ms-transform: translateY(-50%);    
-    transform: translateY(-50%);
-    right: 0px; left: 0;}
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 3rem;
+}
 
 #popup1 .popup h2 { 
     margin-top: 0; 
-    color: #333;
 }
 
 #popup1 .popup .close {
@@ -51,8 +48,8 @@
     font-weight: normal; 
     text-decoration: none;  
     text-align: center;    
-    background: #333;  
-    border-radius: 0;  
+    background: #F8C8dc;  
+    border-radius: 10px;  
     cursor: pointer;  
     float: right;  
     padding: 0;  
@@ -62,21 +59,17 @@
     height: 40px;  
     width: 40px;    
     line-height: 45px;
+    border: 1px solid #836953;
 }
 
 #popup1 .popup .close:hover {
-    color: #06D85F;
-}
-
-#popup1 .popup .content {
-    max-height: 30%;
-    overflow: auto;
+    color: #836953;
 }
 
 #popup1 .newletter-title h2 {   
     font-size: 24px;  
     text-transform: uppercase;  
-    color: #000;  
+    color: #836953;  
     font-weight: 700;  
     letter-spacing: 3px;  
     margin: 0 0 15px;
@@ -86,9 +79,8 @@
     font-weight: 400;  
     max-width: 560px;  
     display: inline-block;  
-    margin-bottom: 5px;  
-    font-size: 14px; 
-    line-height: 26px;
+    margin: 1rem;  
+    font-size: 1rem;
 }
 
 .newletter-popup {  
@@ -107,43 +99,40 @@
 #popup1 #frm_subscribe #subscribe_pemail {    
     background: #EBEBEB none repeat scroll 0% 0%;    
     border: medium none;    
-    height: 40px;    
-    width: 65%;    
-    margin: 20px 0;    
-    padding-left: 15px;
-}
-
-#popup1 #frm_subscribe a {   
-    cursor: pointer;   
-    border: none;    
-    background: #333;    
-    padding: 3px 25px;    
-    text-transform: uppercase;   
-    font-size: 14px;    
-    color: #fff;
-    font-weight: 600;    
-    line-height: 34px;    
-    display: inline-block;    
-    border-radius: 0;    
-    letter-spacing: 2px;
+    height: 3rem;    
+    width: 90%;    
+    margin: 1rem auto 1.25rem;
+    padding: 0 0.5rem;    
 }
 
 #popup1 .box-content .subscribe-bottom {   
-    margin-top: 20px;
+    margin-top: 1.5rem;
 }
 
-#popup1 .box-content .subscribe-bottom #newsletter_popup_dont_show_again {    
-    display: inline-block;    
-    margin: 0;    
-    vertical-align: middle;    
-    margin-top: -1px;
+
+
+@media (max-width: 767px) {
+    #popup1 .popup {
+    background: #fff;
+    border-radius: 10px;
+    width: 70% !important;
+    height: auto;
+    padding: 2rem;
 }
 
-#popup1 .box-content .subscribe-bottom label {    
-    margin: 0;    
-    font-weight: 400;    
-    max-width: 650px;    
-    display: inline-block;    
-    margin-bottom: 5px;    
-    font-size: 12px;
+}
+
+@media (orientation: landscape) and (max-height: 578px) {
+    #popup1.overlay {
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 0;
+    }
+
+    #popup1 .popup {
+        width: 60% !important;
+        margin: 2rem auto;
+    }
+    
 }
