--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,18 @@ button {
   padding: 0.5rem;
   border-radius: 10px;
   border: 1px solid #836953;
+  cursor: pointer;
 }
 
 .button:hover {
   color: #ffffff;
   background-color: #836953;
+}
+
+input:disabled:hover {
+  background-color: gray;
+  cursor: not-allowed;
+  opacity: 0.5;
 }
 
 .subscription-success, .email-warning {
