--- a/src/pages/VetConsultationPage.css
+++ b/src/pages/VetConsultationPage.css
@@ -105,6 +105,33 @@ li.consultationLogList {
   padding: 2rem;
 }
 
+.webcon {
+  display: grid;
+  grid-template-columns: 1fr 15fr;
+  margin: 1rem auto;
+  font-size: 1.1rem;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem 1.5rem;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  border: 1px solid #836953;
+  z-index: 999;
+}
+
+.deatils-container {
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border: 2px solid #f8c8dc;
+}
+
 .consultation-scheduler h3 {
   font-size: 24px;
   text-align: center;
@@ -247,6 +274,15 @@ width: 100%;
   .vet-consultation-page {
   grid-template-columns: 1fr;
   }
+
+  .popup {
+    width: 80%;
+  }
+
+  .chatbot-container {
+    margin-bottom: 3rem;
+  }
+
 }
 
 @media (max-width: 480px) {
